# evenframe

./: .gitignore  Cargo.toml  LICENSE  README.md
common/: Cargo.toml
common/src/: log.rs
common/src/derive/: imports.rs
common/src/schemasync/: table.rs
common/src/typesync/: effect.rs
evenframe/: Cargo.toml  backup.surql  new_schema.surql  remote_schema.surql  test_interval.rs
evenframe/logs/: access_config.surql  access_query.surql  all_statements.surql  current_schema.sql  define_statements.surql  new_schema.sql  remove_statements.surql  upsert_statements.surql
evenframe/src/: config_builders.rs  lib.rs  main.rs  old.rs  workspace_scanner.rs
evenframe/src/lib/: config.rs  crud_generic.rs  default.rs  dependency.rs  error.rs  mod.rs  traits.rs  types.rs  validator.rs  wrappers.rs
evenframe/src/lib/derive/: attributes.rs  coordinate_parser.rs  deserialization_impl.rs  enum_impl.rs  imports.rs  mod.rs  struct_impl.rs  type_parser.rs  validator_parser.rs
evenframe/src/lib/schemasync/: config.rs  edge.rs  mod.rs  permissions.rs  table.rs
evenframe/src/lib/schemasync/compare/: import.rs  mod.rs
evenframe/src/lib/schemasync/mockmake/: coordinate.rs  field_value.rs  field_value_recursive.rs  format.rs  maker.rs  mod.rs  regex_val_gen.rs
evenframe/src/lib/schemasync/surql/: access.rs  define.rs  execute.rs  insert.rs  mod.rs  remove.rs  upsert.rs
evenframe/src/lib/types/: mod.rs
evenframe/src/lib/typesync/: arktype.rs  config.rs  effect.rs
evenframe_core/: Cargo.toml
evenframe_core/src/: config.rs  default.rs  dependency.rs  error.rs  log.rs  validator.rs  wrappers.rs
evenframe_core/src/derive/: attributes.rs  coordinate_parser.rs  deserialization_impl.rs  imports.rs  mod.rs  struct_impl.rs
evenframe_core/src/schemasync/: edge.rs  mod.rs  permissions.rs
evenframe_core/src/schemasync/compare/: filter.rs  import.rs  mod.rs
evenframe_core/src/schemasync/mockmake/: coordinate.rs  field_value.rs  field_value_recursive.rs  mod.rs  regex_val_gen.rs
evenframe_core/src/schemasync/surql/: define.rs  insert.rs  mod.rs  remove.rs
evenframe_core/src/types/: mod.rs
evenframe_core/src/types/field_type/: mod.rs
evenframe_core/src/typesync/: arktype.rs  effect.rs  mod.rs
evenframe_derive/: Cargo.toml
evenframe_derive/src/: attributes.rs  coordinate_parser.rs  coordinate_parsing.rs  deserialization_impl.rs  enum_impl.rs  field_deserialization.rs  handlers.rs  imports.rs  lib.rs  struct_impl.rs  type_parser.rs  validator_parser.rs  validators.rs
