[workspace]
members = ["common", "evenframe", "evenframe_derive"]
resolver = "2"

[workspace.dependencies]
try_from_expr = { path = "../try_from_expr/try_from_expr" }
common = { path = "common" }
serde_json = "1.0.142"
regex = "1.11.1"
syn = { version = "2.0.104", features = ["full"] }
tracing = "0.1.41"
convert_case = "0.7.1"
tokio = { version = "1.47.1", features = ["full"] }
