[package]
name = "evenframe"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]

# workspace dependencies
common = { workspace = true }
syn = { workspace = true }
tracing = { workspace = true }
convert_case = { workspace = true }
tokio = { workspace = true }

evenframe_derive = { path = "../evenframe_derive" }
tracing-subscriber = "0.3"
