[package]
name = "evenframe_derive"
version = "0.1.0"
edition = "2024"

[lib]
proc-macro = true

[dependencies]

# workspace dependencies
serde_json = { workspace = true }
regex = { workspace = true }

proc-macro2 = "1.0.95"
quote = "1.0.40"
syn = { version = "2.0.104", features = ["full"] }
evenframe = { path = "../evenframe" }


[features]
default = []
